[package]
name = "with_dir"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Scoped update of current working directory"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"

[dev-dependencies]
tempdir = "0.3"
