[package]
name = "with_dir"
version = "0.1.4"
edition = "2021"
authors = ["Huw Percival <huw.percival@gmail.com>"]
license-file = "LICENSE"
description = "Scoped current working directory"
repository = "https://github.com/huwper/with_dir"
keywords = ["with_dir", "cwd", "with_cwd", "filesystem"]

[dependencies]
parking_lot = "0.12"
tempfile = "3.4"

[dev-dependencies]
